# mapillary-cleanup

./: README.md  pyproject.toml
mapillary_cleanup/: main.py
