[tool.poetry]
name = "mapillary-cleanup"
version = "0.3.0"
description = ""
authors = ["Hsiao-Ting <sst.dreams@gmail.com>"]
license = "MIT"
packages = [
    { include = "mapillary_cleanup"}
]

[tool.poetry.dependencies]
python = "^3.9"
geopy = "^2.2.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[tool.poetry.scripts]
mapillary_cleanup = "mapillary_cleanup.main:process"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
